--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <title>MindCoach</title>
 
-  <!-- Favicon / app icon (mobile) -->
   <link
     rel="icon"
     type="image/png"
@@ -21,28 +20,27 @@
     :root {
       --bg1: #eef0ff;
       --bg2: #e7f7f2;
-      /* softer cream beige for AI bubbles */
-      --bg3: #f8f3e8;
+      --bg3: #f8f3e8; /* New softer cream beige */
 
       --card: #ffffff;
       --brand: #4fa3d1;
-      --bubble-ai: var(--bg3);
+      --bubble-ai: var(--bg3); /* updated AI bubble */
       --bubble-you: #e0f2ff;
 
       --text: #3f4a52;
       --muted: #7c8a94;
     }
 
-    /* Watercolor background */
+    /* Updated watercolor background */
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Helvetica, Arial, sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       color: var(--text);
       background:
-        radial-gradient(circle at 20% 20%, rgba(200, 225, 255, 0.45), transparent 60%),
-        radial-gradient(circle at 80% 30%, rgba(210, 245, 230, 0.4), transparent 60%),
-        radial-gradient(circle at 30% 80%, rgba(255, 240, 220, 0.45), transparent 60%),
+        radial-gradient(circle at 20% 20%, rgba(200,225,255,0.4), transparent 60%),
+        radial-gradient(circle at 80% 30%, rgba(210,245,230,0.35), transparent 60%),
+        radial-gradient(circle at 30% 80%, rgba(255,240,220,0.40), transparent 60%),
         linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg3));
       min-height: 100vh;
       display: flex;
@@ -129,10 +127,6 @@
       white-space: normal;
     }
 
-    .msg strong {
-      font-weight: 600;
-    }
-
     .msg.ai {
       align-self: flex-start;
       background: var(--bubble-ai);
@@ -181,24 +175,7 @@
       background: var(--brand);
       color: #ffffff;
       box-shadow: 0 6px 18px rgba(79, 163, 209, 0.35);
-      transition: transform 0.08s ease-out, box-shadow 0.08s ease-out,
-        background 0.1s ease-out;
-    }
-
-    .input-row button:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 10px 22px rgba(79, 163, 209, 0.4);
-    }
-
-    .input-row button:active {
-      transform: translateY(0);
-      box-shadow: 0 4px 12px rgba(79, 163, 209, 0.3);
-    }
-
-    .input-row button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-      box-shadow: none;
+      transition: transform 0.08s ease-out, box-shadow 0.08s ease-out;
     }
 
     @media (max-width: 768px) {
@@ -226,4 +203,104 @@
     <div class="card">
       <div class="brand">
         <div class="brand_logo">
-          <img src="mindcoach-icon-1024.png
+          <img src="mindcoach-icon-1024.png" alt="MindCoach logo" />
+        </div>
+        <h1>MindCoach</h1>
+      </div>
+      <p class="tag">
+        You matter. You’re heard. Calm guidance in every language by LuxeMind.
+      </p>
+
+      <div id="log"></div>
+
+      <div class="input-row">
+        <textarea
+          id="msg"
+          placeholder="Share what’s on your mind… (Enter to send, Shift+Enter for new line)"
+        ></textarea>
+        <button id="send">Send</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const log = document.getElementById("log");
+    const input = document.getElementById("msg");
+    const btn = document.getElementById("send");
+
+    function scrollToBottom() {
+      log.scrollTop = log.scrollHeight;
+    }
+
+    function add(role, text) {
+      const div = document.createElement("div");
+      div.className = "msg " + (role === "You" ? "you" : "ai");
+      div.innerHTML = `<strong>${role}:</strong> ${text.replace(/\n/g, "<br>")}`;
+      log.appendChild(div);
+      scrollToBottom();
+      return div;
+    }
+
+    function addTyping() {
+      const div = document.createElement("div");
+      div.className = "msg ai";
+      div.innerHTML = `<strong>MindCoach:</strong> <span class="dots">...</span>`;
+      log.appendChild(div);
+      scrollToBottom();
+      return div;
+    }
+
+    async function send() {
+      const message = input.value.trim();
+      if (!message) return;
+
+      add("You", message);
+      input.value = "";
+      input.focus();
+
+      btn.disabled = true;
+      const typingDiv = addTyping();
+
+      try {
+        const res = await fetch("/api/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message })
+        });
+
+        const data = await res.json();
+        typingDiv.remove();
+
+        if (!res.ok) {
+          add("MindCoach", data.error || "Something went wrong.");
+        } else {
+          add("MindCoach", data.text || "");
+        }
+      } catch (e) {
+        typingDiv.remove();
+        add("MindCoach", "Network issue — try again.");
+      } finally {
+        btn.disabled = false;
+        scrollToBottom();
+      }
+    }
+
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" && !e.shiftKey) {
+        e.preventDefault();
+        send();
+      }
+    });
+
+    btn.onclick = send;
+
+    window.addEventListener("load", () => {
+      add(
+        "MindCoach",
+        "Welcome. I’m here for you with calm, clarity, and care. Whenever you’re ready, tell me what’s on your mind."
+      );
+      input.focus();
+    });
+  </script>
+</body>
+</html>
