Add Stripe payment link to upgrade button
Replaced placeholder checkout URL with my real Stripe payment link so users can upgrade to MindCoach Plus

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 
       goUpgrade.addEventListener("click", () => {
         // TODO: Replace with your real Stripe Checkout link
-        window.open("https://YOUR_STRIPE_CHECKOUT_LINK_HERE", "_blank");
+        window.open, ("https://buy.stripe.com/6oUeV56dcgwFcn5axv63K00")
 
         // Temporary: mark as Pro so you can keep testing
         try {
