Add Stripe button to index.html

--- a/index.html
+++ b/index.html
@@ -662,5 +662,14 @@
         "Hello 🌱 I’m glad you’re here. How are you feeling right now?"
       );
     </script>
+    <script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1STXD50YpWkVmsiLFRmgapRw"
+  publishable-key="pk_live_51STD8B0YpWkVmsiLWkPILRZMTlvu8FA211rgrfoACFtO5qLaA1ofHHTPSJ0SWW6T6oZ3MDZJ8yPDreptWiXOta4L00Xrlp4pxW"
+>
+</stripe-buy-button>
   </body>
 </html>
