--- a/index.html
+++ b/index.html
@@ -7,79 +7,142 @@
   <link rel="stylesheet" href="styles.css" />
 
   <style>
-    body {
-      background: #ffffff;
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      overflow: hidden;
+    :root {
+      --bg: #f5f3ff;
+      --card-bg: #ffffff;
+      --accent: #525f7f;
+      --accent-soft: #dde3ff;
+      --accent-strong: #3b4260;
+      --pause: #f5a623;
+      --pause-soft: #ffe7bd;
+      --border-subtle: #e4e4f0;
+      --text-main: #222233;
+      --text-soft: #666680;
+      --text-softer: #9999b3;
+      --danger: #d9534f;
     }
 
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
+        "Segoe UI", Arial, sans-serif;
+      background: radial-gradient(circle at top left, #fef3ff, #f0f4ff 40%, #f5f3ff 80%);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      padding: 10px;
+    }
+
+    #app-shell {
+      background: var(--card-bg);
+      border-radius: 24px;
+      box-shadow:
+        0 14px 35px rgba(15, 23, 42, 0.15),
+        0 0 0 1px rgba(148, 163, 184, 0.15);
+      max-width: 860px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      height: 100%;
+      max-height: 820px;
+    }
+
+    @media (max-width: 768px) {
+      body {
+        padding: 0;
+      }
+      #app-shell {
+        border-radius: 0;
+        max-height: 100vh;
+      }
+    }
+
+    /* HEADER */
     #header {
-      padding: 12px 20px 6px;
-      border-bottom: 1px solid #eee;
-      background: #ffffff;
+      padding: 14px 20px 8px;
+      border-bottom: 1px solid var(--border-subtle);
+      background: linear-gradient(135deg, #ffffff, #f8f5ff);
     }
 
     #header h1 {
       margin: 0;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: 700;
+      color: var(--text-main);
+      letter-spacing: 0.01em;
     }
 
     #header p {
-      margin: 4px 0 0;
-      font-size: 14px;
-      color: #555;
+      margin: 5px 0 0;
+      font-size: 13px;
+      color: var(--text-soft);
     }
 
+    /* LANGUAGE BAR */
     #lang-bar {
       display: flex;
       align-items: center;
-      gap: 6px;
-      padding: 4px 20px 8px;
-      border-bottom: 1px solid #f3f3f3;
-      background: #ffffff;
+      justify-content: space-between;
+      gap: 8px;
+      padding: 6px 20px 10px;
+      border-bottom: 1px solid var(--border-subtle);
+      background: #fafbff;
     }
 
     #lang-bar span {
       font-size: 12px;
-      color: #666;
+      color: var(--text-soft);
+      white-space: nowrap;
+    }
+
+    #lang-buttons {
+      display: inline-flex;
+      padding: 2px;
+      border-radius: 999px;
+      background: #ecefff;
+      border: 1px solid #d5dbff;
     }
 
     #lang-buttons button {
-      border: 1px solid #ccc;
-      border-radius: 14px;
-      padding: 4px 8px;
+      border-radius: 999px;
+      padding: 4px 10px;
       font-size: 11px;
-      background: #fafafa;
+      border: none;
+      background: transparent;
       cursor: pointer;
+      color: var(--text-soft);
+      min-width: 42px;
     }
 
     #lang-buttons button.active {
-      background: #525f7f;
-      color: #fff;
-      border-color: #525f7f;
+      background: #ffffff;
+      color: var(--accent-strong);
+      font-weight: 600;
+      box-shadow: 0 1px 4px rgba(15, 23, 42, 0.12);
     }
 
-    /* Daily check-in banner */
+    /* DAILY CHECK-IN BANNER */
     #checkin-banner {
       display: none;
       align-items: center;
       justify-content: space-between;
       gap: 8px;
-      padding: 8px 20px;
-      border-bottom: 1px solid #f0f0f0;
-      background: #fffaf2;
+      padding: 10px 20px;
+      border-bottom: 1px solid var(--border-subtle);
+      background: #fff7eb;
       font-size: 13px;
     }
 
     #checkin-banner p {
       margin: 0;
       flex: 1;
-      color: #444;
+      color: #7b5a26;
     }
 
     #checkin-banner-buttons {
@@ -89,182 +152,224 @@
     }
 
     #checkin-banner-buttons button {
-      border-radius: 14px;
-      padding: 4px 10px;
+      border-radius: 999px;
+      padding: 4px 12px;
       font-size: 11px;
-      border: 1px solid #e0a65a;
-      background: #ffe2b8;
+      border: 1px solid #f0b35c;
+      background: #ffe5bd;
       cursor: pointer;
       white-space: nowrap;
     }
 
     #checkin-banner-buttons button.secondary {
-      border-color: #ccc;
-      background: #f7f7f7;
+      border-color: #d4d4dd;
+      background: #f7f7fb;
+      color: var(--text-soft);
     }
 
-    #chat-container {
-      flex: 1;
-      overflow-y: auto;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .message {
-      margin-bottom: 12px;
-      padding: 12px;
-      border-radius: 8px;
-      max-width: 85%;
-      line-height: 1.4;
-      white-space: pre-wrap;
-    }
-
-    .user {
-      background: #d9e6ff;
-      align-self: flex-end;
-    }
-
-    .bot {
-      background: #f2f2f2;
-      align-self: flex-start;
-    }
-
+    /* MOOD BAR */
     #mood-bar {
-      padding: 10px 20px 0;
-      border-bottom: 1px solid #f0f0f0;
+      padding: 10px 20px 4px;
+      border-bottom: 1px solid var(--border-subtle);
       background: #ffffff;
     }
 
     #mood-bar p {
       margin: 0 0 6px;
       font-size: 13px;
-      color: #555;
+      color: var(--text-soft);
     }
 
     #mood-buttons {
       display: flex;
       flex-wrap: wrap;
-      gap: 6px;
+      gap: 8px;
     }
 
     #mood-buttons button {
-      border: 1px solid #ccc;
-      border-radius: 16px;
-      padding: 6px 10px;
+      border: 1px solid #d7d9ee;
+      border-radius: 999px;
+      padding: 5px 12px;
       font-size: 12px;
-      background: #fafafa;
+      background: #f6f7ff;
       cursor: pointer;
+      color: var(--text-soft);
     }
 
     #mood-buttons button:hover {
-      background: #f0f0f0;
+      background: #eef0ff;
+      border-color: #c4c7f5;
     }
 
+    /* CHAT AREA */
+    #chat-container {
+      flex: 1;
+      overflow-y: auto;
+      padding: 18px 20px 10px;
+      display: flex;
+      flex-direction: column;
+      background: radial-gradient(circle at top, #f9f7ff, #f7f6ff 40%, #f6f7fb 80%);
+    }
+
+    .message {
+      margin-bottom: 12px;
+      padding: 11px 13px;
+      border-radius: 16px;
+      max-width: 82%;
+      line-height: 1.5;
+      white-space: pre-wrap;
+      font-size: 14px;
+      box-shadow: 0 1px 3px rgba(15, 23, 42, 0.06);
+    }
+
+    .user {
+      background: #d9e6ff;
+      align-self: flex-end;
+      border-bottom-right-radius: 4px;
+      color: #1f2937;
+    }
+
+    .bot {
+      background: #ffffff;
+      align-self: flex-start;
+      border-bottom-left-radius: 4px;
+      border: 1px solid #e3e5f5;
+      color: #111827;
+    }
+
+    /* INPUT / CONTROLS */
     #input-container {
       display: flex;
-      border-top: 1px solid #ccc;
-      padding: 12px;
-      background: #fff;
+      border-top: 1px solid var(--border-subtle);
+      padding: 10px 12px;
+      background: #ffffff;
+      align-items: center;
+      gap: 8px;
     }
 
     #user-input {
       flex: 1;
-      padding: 12px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    #send-btn {
-      margin-left: 10px;
-      padding: 12px 18px;
-      font-size: 16px;
-      background: #525f7f;
-      color: white;
-      border-radius: 6px;
-      border: none;
-      cursor: pointer;
-    }
-
-    #pause-btn {
-      margin-left: 10px;
-      padding: 12px 18px;
+      padding: 11px 12px;
+      border-radius: 999px;
+      border: 1px solid #d6d8ec;
       font-size: 14px;
-      background: #f5a623;
-      color: #fff;
-      border-radius: 6px;
+      outline: none;
+      transition: border-color 0.15s ease, box-shadow 0.15s ease;
+    }
+
+    #user-input:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 2px rgba(82, 95, 127, 0.12);
+    }
+
+    #send-btn,
+    #pause-btn {
+      padding: 10px 16px;
+      font-size: 13px;
+      border-radius: 999px;
       border: none;
       cursor: pointer;
       white-space: nowrap;
+      font-weight: 600;
+    }
+
+    #send-btn {
+      background: var(--accent);
+      color: #ffffff;
+      box-shadow: 0 2px 6px rgba(15, 23, 42, 0.18);
+    }
+
+    #send-btn:hover:not(:disabled) {
+      background: var(--accent-strong);
+    }
+
+    #pause-btn {
+      background: var(--pause);
+      color: #fff;
+      box-shadow: 0 2px 6px rgba(245, 166, 35, 0.35);
+    }
+
+    #pause-btn:hover:not(:disabled) {
+      background: #e4961e;
     }
 
     button:disabled {
       opacity: 0.6;
       cursor: not-allowed;
+      box-shadow: none;
     }
 
     #paywall-note {
-      padding: 8px 20px 4px;
-      font-size: 12px;
-      color: #555;
-      border-top: 1px solid #f3f3f3;
-      background: #ffffff;
+      padding: 6px 20px 8px;
+      font-size: 11px;
+      color: var(--text-softer);
+      border-top: 1px solid var(--border-subtle);
+      background: #fafbff;
     }
 
     stripe-buy-button {
-      margin: 4px auto 16px;
+      margin: 2px auto 14px;
       display: block;
     }
   </style>
 </head>
 
 <body>
-  <div id="header">
-    <h1>Latina MindCoach</h1>
-    <p>For Latinas who carry everything.</p>
-  </div>
-
-  <div id="lang-bar">
-    <span>Language mode:</span>
-    <div id="lang-buttons">
-      <button data-mode="auto" class="active">Auto</button>
-      <button data-mode="en">EN</button>
-      <button data-mode="es">ES</button>
+  <div id="app-shell">
+    <div id="header">
+      <h1>Latina MindCoach</h1>
+      <p>For Latinas who carry everything.</p>
     </div>
-  </div>
 
-  <!-- Daily check-in banner (once per day) -->
-  <div id="checkin-banner">
-    <p>Take 30 seconds just for yourself today 💛</p>
-    <div id="checkin-banner-buttons">
-      <button id="checkin-start-btn" type="button">Start today’s check-in</button>
-      <button id="checkin-skip-btn" type="button" class="secondary">Skip</button>
+    <div id="lang-bar">
+      <span>Language mode:</span>
+      <div id="lang-buttons">
+        <button data-mode="auto" class="active">Auto</button>
+        <button data-mode="en">EN</button>
+        <button data-mode="es">ES</button>
+      </div>
     </div>
-  </div>
 
-  <div id="mood-bar">
-    <p>How are you feeling right now?</p>
-    <div id="mood-buttons">
-      <button onclick="selectMood('anxious')">Anxious</button>
-      <button onclick="selectMood('overwhelmed')">Overwhelmed</button>
-      <button onclick="selectMood('sad')">Sad</button>
-      <button onclick="selectMood('angry')">Angry</button>
-      <button onclick="selectMood('numb')">Numb</button>
-      <button onclick="selectMood('unknown')">I don’t know</button>
+    <!-- Daily check-in banner (once per day) -->
+    <div id="checkin-banner">
+      <p>Take 30 seconds just for yourself today 💛</p>
+      <div id="checkin-banner-buttons">
+        <button id="checkin-start-btn" type="button">Start today’s check-in</button>
+        <button id="checkin-skip-btn" type="button" class="secondary">Skip</button>
+      </div>
     </div>
-  </div>
 
-  <div id="chat-container"></div>
+    <div id="mood-bar">
+      <p>How are you feeling right now?</p>
+      <div id="mood-buttons">
+        <button onclick="selectMood('anxious')">Anxious</button>
+        <button onclick="selectMood('overwhelmed')">Overwhelmed</button>
+        <button onclick="selectMood('sad')">Sad</button>
+        <button onclick="selectMood('angry')">Angry</button>
+        <button onclick="selectMood('numb')">Numb</button>
+        <button onclick="selectMood('unknown')">I don’t know</button>
+      </div>
+    </div>
 
-  <div id="input-container">
-    <input id="user-input" type="text" placeholder="Tell me how you feel right now…" />
-    <button id="pause-btn" type="button">La Pausa</button>
-    <button id="send-btn" type="button">Send</button>
-  </div>
+    <div id="chat-container"></div>
 
-  <div id="paywall-note">
-    Unlimited daily support is available with the button below 💛
+    <div id="input-container">
+      <input id="user-input" type="text" placeholder="Tell me how you feel right now…" />
+      <button id="pause-btn" type="button">La Pausa</button>
+      <button id="send-btn" type="button">Send</button>
+    </div>
+
+    <div id="paywall-note">
+      Unlimited daily support is available with the button below 💛
+    </div>
+
+    <!-- STRIPE BUY BUTTON -->
+    <script async src="https://js.stripe.com/v3/buy-button.js"></script>
+
+    <stripe-buy-button
+      buy-button-id="buy_btn_1STXD50YpWkVmsiLFRmgapRw"
+      publishable-key="pk_live_51STDB8OYpWkVmsiLwKPILRZMTvLu8FA21IrgrfoACFtO5qLaA1ofHHTPSJ0SWW6To6Z3MDZJ8yPDreptWiX0ta4L00Xrlp4X">
+    </stripe-buy-button>
   </div>
 
   <script>
@@ -449,6 +554,9 @@ This pause is healing you.
       if (checkinStartBtn) {
         checkinStartBtn.onclick = () => {
           localStorage.setItem(CHECKIN_DATE_KEY, today);
+          checkinBanner.style.display = "flex";
+          checkinBanner.style.opacity = "0";
+          checkinBanner.style.pointerEvents = "none";
           checkinBanner.style.display = "none";
           addMessage(
             "bot",
@@ -476,14 +584,5 @@ This pause is healing you.
       lockChat(false);
     }
   </script>
-
-  <!-- STRIPE BUY BUTTON -->
-  <script async src="https://js.stripe.com/v3/buy-button.js"></script>
-
-  <stripe-buy-button
-    buy-button-id="buy_btn_1STXD50YpWkVmsiLFRmgapRw"
-    publishable-key="pk_live_51STDB8OYpWkVmsiLwKPILRZMTvLu8FA21IrgrfoACFtO5qLaA1ofHHTPSJ0SWW6To6Z3MDZJ8yPDreptWiX0ta4L00Xrlp4X">
-  </stripe-buy-button>
-
 </body>
 </html>
